--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Eugenia Tunha</a> and is
+          <a href="https://github.com/Eugal-git/Am-happy" target="_blank">Eugenia Tunha</a> and is
           <a href="https://github.com/Eugal-git/Am-happy" target="_blank"> on GitHub</a> and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
