--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       <footer>
         <p>
           This project was coded by
-          <a href="https://github.com/Eugal-git" target="_blank">Eugenia Tunha</a> and is
-          <a href="https://github.com/Eugal-git/Am-happy" target="_blank"> on GitHub</a> and
-          <a href="https://app.netlify.com/teams/eugal-git/sites" target="_blank">hosted on Netlify</a>
+          <a href="#" target="_blank">Eugenia Tunha</a> and is
+          <a href="#" target="_blank"> on GitHub</a> and
+          <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
